nx-desktop-appimages-minimal (0.0.1)  nitrux; urgency=medium

  * Create package.

 -- Uri Herrera <uri_herrera@nxos.org>  Fri, 29 Jan 2021 15:00:00 -0500